--- a/TH2302023TranCongDuong/AngularJS_Exam/CSS/exam.css
+++ b/TH2302023TranCongDuong/AngularJS_Exam/CSS/exam.css
@@ -6,7 +6,6 @@
     padding: 10px;
     margin: 10px;
     width: 200px;
-    height: 200px;
 }
 .card-row {
     clear: both;
@@ -22,5 +21,9 @@ button {
 button:hover {
     background: #6e99ff;
     border: solid 2px #6e99ff;
-    color: white;
+    color: white;s
+}
+
+img {
+    width: 100%;
 }
