--- a/TH2302023TranCongDuong/AngularJS_Exam/CSS/exam.css
+++ b/TH2302023TranCongDuong/AngularJS_Exam/CSS/exam.css
@@ -21,7 +21,7 @@ button {
 button:hover {
     background: #6e99ff;
     border: solid 2px #6e99ff;
-    color: white;s
+    color: white;
 }
 
 img {
